extension.css
/* ... */
.ctx-item + .ctx-header {
    border-top: 1px dashed color-mix(in srgb, var(--SmartThemeBodyColor) 25%, transparent) !important;
    margin-top: 5px;
    padding-top: 10px;
}
.list-group .list-group-item.ctx-header {
    opacity: 0.8 !important;
    letter-spacing: 0.2px;
}
.ctx-blocker li:hover {
    color: var(--SmartThemeBodyColor);
}
.list-group .list-group-item.ctx-header,
.ctx-item .qr--button-label{
    @media screen and (max-width: 1000px) {
        font-size: calc(var(--mainFontSize) * 0.95) !important;
        padding-bottom: 2.5px;
    }
}
.list-group .list-group-item.ctx-item {
    @media screen and (max-width: 1000px) {
        padding: 1px 5px !important;
    }
}

/* --- Chat Info 聊天資訊 --- */

body:has(#extensionTopBar) {
    #sheld {
        padding-top: calc(var(--topBarBlockSize)) !important;
    }

    @media screen and (max-width: 1000px) {
        #sheld {
            padding-top: calc(var(--topBarBlockSize) - 5px) !important;
        }

    }
}
body.waifuMode:has(#extensionTopBar) {
    #sheld {
        padding-top: 0 !important;
    }
}

#extensionTopBar {
    /* 定位 */
    position: fixed;
    top: calc(var(--topBarBlockSize) + 5px) !important;
    left: 50%;
    bottom: auto;
    transform: translateX(-50%);
    z-index: 3005;

    /* 尺寸 */
    width: calc(var(--sheldWidth) - 20px) !important;
    height: var(--bottomFormBlockSize);

    /* 佈局 */
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    flex-shrink: 0;
    align-content: center;
    align-items: center;
    justify-content: center;
    gap: 10px;
    padding-top: 0;

    /* 樣式 */
    background-color: var(--SmartThemeBlurTintColor);
    backdrop-filter: blur(var(--SmartThemeBlurStrength));
    border-radius: 10px !important;
    font-size: calc(var(--mainFontSize) * 0.9);
    transition: all 0.8s ease;

    @media screen and (max-width: 1000px) {
        top: var(--topBarBlockSize) !important;
        width: 100% !important;
        border-radius: 0 !important;
        opacity: 0.8;
        border: none !important;
        border-top: 1px solid color-mix(in srgb, var(--SmartThemeBodyColor) 50%, transparent) !important;
        border-bottom: 1px solid color-mix(in srgb, var(--SmartThemeBodyColor) 25%, transparent) !important;
    }
}
body:has(#extensionConnectionProfiles.visible) #extensionTopBar {
    border-radius: 10px 10px 0 0 !important;

    @media screen and (max-width: 1000px) {
        border-radius: 0 !important;
    }
}
body.waifuMode:has(#extensionConnectionProfiles.visible) #extensionTopBar {
    border-radius: 10px !important;
}

#extensionSideBar {
    top: var(--topBarBlockSize) !important;
    max-height: calc(100dvh - var(--topBarBlockSize)) !important;
    min-height: calc(100dvh - var(--topBarBlockSize)) !important;
    border-radius: 0 !important;

    &.visible {
        display: flex;
        padding: 15px;
        border: 0;
        border-top: 1.25px solid color-mix(in srgb, var(--SmartThemeBodyColor) 25%, transparent) !important;
    }

    #extensionSideBarContainer {
        padding: 10px;
        margin-bottom: 5px;
    }
}

#select_chat_popup {
    padding: 10px;
    box-shadow: 0px 0px 20px var(--SmartThemeBorderColor);

    @media screen and (max-width: 1000px) {
        align-items: start;
        height: 90dvh;
        max-height: 90dvh;
        align-content: start;
        max-width: unset;
        overflow-y: auto;
    }
}
#shadow_select_chat_popup {
    backdrop-filter: blur(calc(var(--SmartThemeBlurStrength))) !important;
    -webkit-backdrop-filter: blur(calc(var(--SmartThemeBlurStrength))) !important;
    background-color: var(--black70a);
}

.select_chat_block {
    margin: 5px 0;
    padding: 10px 15px;
    border-radius: 10px;
    background: color-mix(in srgb, var(--SmartThemeBodyColor) 5%, transparent);

    &:hover {
        background: color-mix(in srgb, var(--SmartThemeBodyColor) 25%, transparent);
    }
}

#extensionConnectionProfiles {
    width: calc(var(--sheldWidth) - 20px) !important;
    transform: translateX(-50%);
    left: 50% !important;
    right: auto !important;
    position: relative !important;
    transition: all 0.8s ease;
    margin-left: -2.5px;
    margin-top: 5px !important;
    z-index: 350;

    @media (max-width: 1000px) {
        width: 100% !important;
        border-radius: 0 !important;
        border: none !important;
        border-bottom: 1px solid color-mix(in srgb, var(--SmartThemeBodyColor) 25%, transparent) !important;
        margin-left: 0;
        margin-top: 0 !important;
        opacity: 0.65;
    }
}

#extensionTopBar,
#extensionConnectionProfiles {
    opacity: 0.8;
    transition: all 0.5s ease;

    &:hover {
        opacity: 1;
    }
}
#extensionSideBar #extensionSideBarContainer {
    padding-right: 10px;
}
#extensionSideBar #extensionSideBarContainer .sideBarItem {
    letter-spacing: 1px;
    opacity: 0.7;
    margin-bottom: 5px;
    padding: 6px 10px;
    background-color: color-mix(in srgb, var(--SmartThemeBodyColor) 5%, transparent);

    &:hover {
        background-color: color-mix(in srgb, var(--SmartThemeBodyColor) 25%, transparent) !important;
        opacity: 9;
    }
}
#extensionSideBar #extensionSideBarContainer .sideBarItem .chatStats .counterBlock::after {
    color: var(--SmartThemeBodyColor) !important;
    font-size: calc(var(--mainFontSize)* 0.85);
}
#extensionSideBar #extensionSideBarContainer .sideBarItem.selected {
    background-color: transparent !important;
    border-color: var(--customThemeColor);
    opacity: 1;
}

body.waifuMode {
    #extensionConnectionProfiles {
        border-radius: 10px !important;
        margin-bottom: 0px !important;

        @media screen and (max-width: 1000px) {
            border-radius: 0 !important;
        }
    }
}

/* --- Dialogue Colorizer 對話顏色 --- */

.dc-color-picker-wrapper {
    border: 0px !important;
}
.dc-color-settings-group {
    border: 0px solid var(--SmartThemeBodyColor) !important;
}
/* ... */

